# grass-demo

./: .gitignore  Cargo.toml  Example.ipynb  README.md  grass-cli  main.rs  start-jupyter.sh
data/: a.bed  b.bed  tag.bed  test.genome
examples/: filter-and-mutate.rs  intersect-bed-with-bam.rs  intersect2.rs  intersect3.rs  merge.rs  multiinter.rs
grass/: Cargo.toml  Example.ipynb
grass-formats/: Cargo.toml
grass-formats/src/: lib.rs
grass-macros/: Cargo.toml
grass-macros/src/: lib.rs
grass-macros/src/ql/: expr.rs  mod.rs  open_impl.rs  operator.rs
grass/examples/: bedtools_complement.rs  bedtools_intersect_f.rs  bedtools_intersect_u.rs  bedtools_intersect_v.rs  bedtools_merge.rs  bedtools_shift.rs  bedtools_subtract.rs  bedtools_window.rs  intersect-formating.rs  intersect2-ql.rs  intersect2.rs  invert-ql.rs  merge.rs
grass/src/: algorithms.rs  chromset.rs  file.rs  high_level_api.rs  lib.rs  properties.rs
grass/src/algorithm/: components.rs  mod.rs
grass/src/algorithm/intersect/: heap.rs  inner.rs  mod.rs  outer.rs
grass/src/algorithm/markers/: sorted.rs
grass/src/high_level_api/: depth.rs  merge.rs  mod.rs  open_helper.rs  show.rs  subtract.rs
grass/src/records/: bam.rs  bed3.rs  bed4.rs  bed5.rs  mod.rs  vcf.rs
src/: algorithms.rs  chrom.rs  chromset.rs  file.rs  lib.rs  main.rs  properties.rs  records.rs
src/algorithm/: components.rs  mod.rs
src/algorithm/intersect/: heap.rs  inner.rs  mod.rs  outer.rs
src/algorithm/markers/: mod.rs  sorted.rs
src/records/: bam.rs  bed3.rs  bed4.rs  mod.rs  vcf.rs
