[package]
name = "gql"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d4-hts = {version = "0.1.16", optional=true}
memchr = "2.3.4"

[dev-dependencies]
itertools = "0.10.0"

[lib]
name = "gql"

[profile.release]
debug = true
