[package]
name = "grass"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hts = {version = "0.1.18", optional=true}
memchr = "2.3.4"
lazy_static = "1.4.0"
num = "0.3.1"
itertools = "0.10.0"

[features]
default = ["hts"]

[dev-dependencies]
itertools = "0.10.0"

[lib]
name = "grass"

[profile.release]
debug = true
