[package]
name = "grass-macros"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.72", features = ["full", "visit-mut"]}
proc-macro2 = "1.0.26"
quote = "1.0.9"
grass-formats = { path = "../grass-formats" }
uuid = {version = "0.8.2", default_features = false, features = ["v4"]}

[lib]
proc-macro = true
